# mercury

./: .cursorrules  .gitignore  Cargo.toml  README.md  docker-compose-dev.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vite.config.ts
apps/backend/: .gitignore  Dockerfile.dev  drizzle.config.ts  eslint.config.mjs  package.json  tsconfig.json
apps/backend/migrations/: 0000_late_microbe.sql  0001_flowery_may_parker.sql  0002_nappy_maddog.sql  0003_smart_paper_doll.sql  0004_uneven_firedrake.sql  0005_mature_grey_gargoyle.sql  0006_clean_maximus.sql
apps/backend/scripts/: migrate.ts
apps/backend/src/: index.ts
apps/dapp/: .env  .npmrc.example  Dockerfile.dev  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/dapp/src/: App.tsx  index.css  main.tsx
apps/starship-rs/: .env  Cargo.toml  Dockerfile-chef.dev  Dockerfile.dev
apps/starship-rs/idls/: pump_fun.json
apps/starship-rs/src/: consts.rs  main.rs
apps/starship-rs/src/entities/: comment_likes.rs  comments.rs  followers.rs  mod.rs  prelude.rs  processed_transactions.rs  sea_orm_active_enums.rs  tickers.rs  users.rs
apps/starship-rs/src/magic/: ascii.rs  env.rs  mod.rs  rpc.rs
apps/starship-rs/src/processor/: fetch_pump_fun_txs.rs  mod.rs
apps/starship-rs/src/processor/pump_fun/: fetch_txs.rs  mod.rs  process_txs.rs
idls/: pump.json  pump_fun.json
scripts/: copy-idl.mjs  down.mjs  generate-seaorm-entities.mjs  migrate.mjs  starship-run.mjs  starship.mjs  up.mjs
src/: App.tsx
src/components/: Background.tsx  Navigation.tsx
(+76 files in other folders)
