[package]
name = "starship-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1.40.0", features = ["full"] }
# Had to downgrade sea-orm to 0.11.3 because of issues with solana and anchor (zeroize)
sea-orm = { version = "^0.11.3", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
dotenvy = "^0.15.7"
anchor-lang = "^0.30.1"
solana-client = "^1.18.25"
solana-sdk = "^1.18.25"
solana-transaction-status = "^1.18.25"
clap = { version = "^4.5.20", features = ["derive"] }
